--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,7 +7,8 @@ target_compile_options(build_FL PUBLIC "-std=c++17")
 
 add_executable(col_split col_split.cpp)
 target_link_libraries(col_split sdsl malloc_count divsufsort divsufsort64 ri)
-target_include_directories(col_split PUBLIC    "../include/ds" 
+target_include_directories(col_split PUBLIC    "../include/ds"
+                                        "../include"
                                         "../include/common"
                                         )
 target_compile_options(col_split PUBLIC "-std=c++17")
