Initial commit of col_bwt for co-lin statistics

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,3 +12,11 @@ target_include_directories(col_split PUBLIC    "../include/ds"
                                         "../include/common"
                                         )
 target_compile_options(col_split PUBLIC "-std=c++17")
+
+add_executable(build_col_bwt build_col_bwt.cpp)
+target_link_libraries(build_col_bwt sdsl malloc_count divsufsort divsufsort64 ri)
+target_include_directories(build_col_bwt PUBLIC    "../include/ds"
+                                        "../include"
+                                        "../include/common"
+                                        )
+target_compile_options(build_col_bwt PUBLIC "-std=c++17")
