--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,9 @@ endif()
 # Set C++ Standard.
 set(CMAKE_CXX_STANDARD 17)
 
+set(ID_BITS 40 CACHE STRING "Number of bits for ID")
+add_definitions(-DID_BITS=${ID_BITS})
+
 # Set the actual flags.
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror")
