--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,3 +28,11 @@ target_include_directories(pml_query PUBLIC    "../include/ds"
                                         "../include/common"
                                         )
 target_compile_options(pml_query PUBLIC "-std=c++17")
+
+add_executable(to_run_output to_run_output.cpp)
+target_link_libraries(to_run_output sdsl malloc_count divsufsort divsufsort64 ri)
+target_include_directories(to_run_output PUBLIC    "../include/ds"
+                                        "../include"
+                                        "../include/common"
+                                        )
+target_compile_options(to_run_output PUBLIC "-std=c++17")
